Fix the ability to bypass app banner engagement checks.

Following https://crrev.com/2778983005, the
chrome://flags/#bypass-app-banner-engagement-checks flag now does not
work unless there is an engagement increase to above the engagement
threshold. This is due to an oversight where the case of the flag being
turned on could trigger the banner pipeline, but was treated like the on
load installability experiment immediately prior to sending the
beforeinstallprompt event.

This CL fixes the bug by explicitly setting |has_sufficient_engagement_|
to true if the bypass flag is enabled (or if 0 engagement is required
for the banner to show).

BUG=714484

Review-Url: https://codereview.chromium.org/2833313002
Cr-Commit-Position: refs/heads/master@{#466590}

Former-commit-id: 64c866e4041adcf57e6e86438482b2c030151f0d